# src/main/java/se/digg/wallet/gateway/domain/model/account/NewAccount.java
@@ -1,0 +1,13 @@
+// SPDX-FileCopyrightText: 2026 Digg - Agency for Digital Government
+//
+// SPDX-License-Identifier: EUPL-1.2
+
+package se.digg.wallet.gateway.domain.model.account;
+
+
+public record NewAccount(String personalIdentityNumber,
+    String emailAdress,
+    String telephoneNumber,
+    Jwk deviceKey) {
+
+}
